Adding model querying to search student and fixing the def __str__ in all models

--- a/school/templates/appTemp/student_list.html
+++ b/school/templates/appTemp/student_list.html
@@ -3,18 +3,49 @@
 {% block content %}
     <h1>All Student Page</h1>
     <p>Registered student in this school:</p>
-    <ul class="list-group" style="width: 600px;">
-        {% for student in student_list %}
-        <li class="list-group-item">
-            <div>Name : {{ student.student_name }}</div>
-            <div>Email : {{ student.student_email }}</div>
-            <div style="text-align: right;">
-                <a href="{% url 'student_edit' student.student_id %}" class="btn btn-success">Edit</a>
-                <a href="{% url 'student_delete' student.student_id %}" class="btn btn-danger">Delete</a>    
-            </div>    
-        </li>
-        {% endfor %}
-    </ul>
+    <form method="POST" action="" class="form-inline">
+        {% csrf_token %}
+        <input style="width: 700px;" name="name" type="text" class="form-control" placeholder="Type to search ...."/>
+        <select name="searchby" class="form-control">
+            <option value="student_name">Student Name</option>
+            <option value="student_email">Email</option>
+            <option value="student_phone">Phone</option>
+            <option value="student_address">Address</option>
+        </select>
+        <button type="submit" class="btn btn-info">Search</button>
+    </form>
+    <br/>
+    <table class="table table-hover">
+        <thead>
+            <tr class="active">
+                <td><strong>Student Name</strong></td>
+                <td><strong>Date of Birth</strong></td>
+                <td><strong>Email</strong></td>
+                <td><strong>Phone</strong></td>
+                <td><strong>Address</strong></td>
+                <td><strong>Class</strong></td>
+                <td><strong>Extracurricular</strong></td>
+            </tr>
+        </thead>
+        <tbody>
+            {% for student in student_list %}
+            <tr>
+                <td>{{ student.student_name }}</td>
+                <td>{{ student.student_DOB }}</td>
+                <td>{{ student.student_email }}</td>
+                <td>{{ student.student_phone }}</td>
+                <td>{{ student.student_address }}</td>
+                <td>{{ student.student_class.all|join:', ' }}</td>
+                <td>{{ student.student_extracurricular.all|join:', ' }}</td>
+                <td>
+                    <a href="{% url 'student_edit' student.student_id %}" class="btn btn-success">Edit</a>
+                    <a href="{% url 'student_delete' student.student_id %}" class="btn btn-danger">Delete</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <br/>
     <p>
         <a href="{% url 'student_add' %}" class="btn btn-info">Add New Student</a>
     </p>
