--- a/school/templates/appTemp/employee/employee_add.html
+++ b/school/templates/appTemp/employee/employee_add.html
@@ -2,15 +2,22 @@
 
 {% block content %}
 {% if type != 'edit' %}
-    <p class="h1">Add a Teacher</p>
+    <p class="h1">Add a Employee</p>
 {% else %}
-    <p class="h1">Edit a Teacher</p>
+    <p class="h1">Edit a Employee</p>
 {% endif %}
     <div class="form-group">
         <form action="" method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <br/>
+            <a href="{% url 'employment_add' %}" class="btn btn-default">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                </svg>
+                 Add Position
+            </a>
+            <br/><br/>
             {% if type != 'edit' %}
                 <input type="submit" value="Add" class="btn btn-info"/>
             {% else %}
