--- a/school/templates/appTemp/extracurricular/extracurricular_list.html
+++ b/school/templates/appTemp/extracurricular/extracurricular_list.html
@@ -39,4 +39,25 @@
     <p>
         <a href="{% url 'extracurricular_add' %}" class="btn btn-info">Add New Extracurricular</a>
     </p>
+    <center>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                {% if extracurricular_list.has_previous %}
+                    <li><a href="?page=1" class="page-link">&laquo; First</a></li>
+                    <li><a href="?page={{ extracurricular_list.previous_page_number }}" class="page-link">Previous</a></li>
+                {% endif %}
+
+                <li>
+                    <span class="current page-item">
+                        Page {{ extracurricular_list.number }} of {{ extracurricular_list.paginator.num_pages }}
+                    </span>
+                </li>
+
+                {% if extracurricular_list.has_next %}
+                    <li><a href="?page={{ extracurricular_list.next_page_number }}" class="page-link">Next</a></li>
+                    <li><a href="?page={{ extracurricular_list.paginator.num_pages }}" class="page-link">Last &raquo;</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    </center>
 {% endblock %}
