Adding class, employment, and extracurricular into Index menu

--- a/school/templates/appTemp/index.html
+++ b/school/templates/appTemp/index.html
@@ -6,6 +6,9 @@
     <div class="h3">Now, we have :</div>
     <br/>
     <div class="h4">Subject: <mark> {{num_subject}} </mark></div>
+    <div class="h4">Class: <mark> {{num_class}} </mark></div>
+    <div class="h4">Employment: <mark> {{num_employment}} </mark></div>
+    <div class="h4">Extracurricular: <mark> {{num_extracurricular}} </mark></div>
     <div class="h4">Employee: <mark> {{num_employee}} </mark></div>
     <div class="h4">Student: <mark> {{num_student}} </mark></div>
     <div class="h4">Total visit: <mark> {{total_visit}} </mark></div>
