--- a/school/static/appStatic/school.css
+++ b/school/static/appStatic/school.css
@@ -3,8 +3,24 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: #fafafa;
+    padding: 0;
+    margin: 0;
+    background-color: #ddd;
 }
+body::after {
+    content: "";
+    background: url(logo-tut-wuri-handayani.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 0.1;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -10;
+  }
 
 p {
     font-family: 'Poppins', sans-serif;
@@ -19,14 +35,17 @@ a, a:hover, a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
+.h4 mark{
+    background: none;
+}
 
 .navbar {
     padding: 15px 10px;
     background: #fff;
     border: none;
-    border-radius: 0;
+    border-radius: 10px;
     margin-bottom: 40px;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 5px rgba(24, 24, 24, 0.1);
 }
 
 .navbar-btn {
@@ -147,9 +166,11 @@ a.article, a.article:hover {
     position: absolute;
     top: 0;
     right: 0;
+    z-index: +1;
 }
 #content.active {
     width: 100%;
+    
 }
 
 
@@ -172,4 +193,133 @@ a.article, a.article:hover {
     #sidebarCollapse span {
         display: none;
     }
+}
+
+/* ---------------------------------------------------
+    REGISTRATION
+----------------------------------------------------- */
+.form{
+    width: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    z-index: +1;
+    padding: 10px 50px;
+    box-sizing: border-box;
+    background-color: #374785;
+    color: #fff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgb(119, 119, 119);
+}
+
+.form h1{
+    float: left;
+    font-size: 25px;
+    color: #fff;
+    border-bottom: 2px  solid #7386D5;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 10px 0;
+}
+.textbox{
+    width: 100%;
+    overflow: hidden;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 10px 0;
+    border-bottom: 1px solid #7386D5;
+}
+.row label{
+    font-weight: normal;
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+.row input{
+    border: none; 
+    outline: none;
+    background: none;
+    color: #fff;
+    font-size: 18px;
+    width: 100%;
+    float: left;
+    margin: 0 10px;
+}
+.row button{
+    width: 100%;
+    background: none;
+    border: 1px #fff;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 12px 0;
+}
+.sub{
+    color: rgb(199, 199, 199);
+}
+
+/* ---------------------------------------------------
+    HOME
+----------------------------------------------------- */
+.home-row {
+	max-width: 1024px;
+    width: 90%;
+}
+
+.home-row-wrapper {
+	margin-bottom: 10rem;
+    padding-top: 50px;
+    box-sizing: border-box;
+    background-color: #7386D5;
+    border-radius: 10px;
+    z-index: +2;
+}
+
+.home-col-left {
+	padding: 5rem 0;
+	width: 100%;
+	z-index: 1;
+}
+
+.home-heading{
+	font-family: Helvetica, Arial, sans-serif;
+	font-weight: 600;
+	line-height: 1.15;
+	margin: 0 0 2rem;
+	font-size: 40px;
+}
+
+.home-text-left {
+	text-align: left;
+}
+
+.home-text {
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	margin-bottom: 1.45rem;
+}
+
+.home-col-img{
+    position: absolute;
+    transform: translate(150%,-95%);
+	z-index: -1;
+}
+
+.index{
+    width: 350px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -40%);
+    z-index: +1;
+    padding: 10px 50px;
+    box-sizing: border-box;
+    background-color: #374785;
+    color: #fff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgb(119, 119, 119);
 }
