--- a/school/templates/appTemp/base_generic.html
+++ b/school/templates/appTemp/base_generic.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'appStatic/school.css' %}">
 </head>
 <body>
-    <div style="position: absolute; margin-top: 150px; margin-left: 400px; z-index: 1;">{% block content %}{% endblock %}</div>
+    <div style=" margin-top: 150px; margin-left: 400px; z-index: 1;">{% block content %}{% endblock %}</div>
     <div class="wrapper">
         <!-- Sidebar Holder -->
         <nav id="sidebar">
@@ -83,7 +83,7 @@
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-people-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1H7zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1h4.216zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5z"/>
                         </svg>
-                         Empoyee
+                         Employee
                     </a>
                 </li>
                 <li>
@@ -123,7 +123,7 @@
                             <span>Menu</span>
                         </button>
                     </div>
-
+                    
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             {% if user.is_authenticated %}
