--- a/school/templates/appTemp/index.html
+++ b/school/templates/appTemp/index.html
@@ -1,6 +1,7 @@
 {% extends "appTemp/base_generic.html" %}
 
 {% block content %}
+    <div class="index">
     <p class="h1">Welcome To Our School Database</p>
     <br/><br/>
     <div class="h3">Now, we have :</div>
@@ -12,4 +13,5 @@
     <div class="h4">Employee: <mark> {{num_employee}} </mark></div>
     <div class="h4">Student: <mark> {{num_student}} </mark></div>
     <div class="h4">Total visit: <mark> {{total_visit}} </mark></div>
+</div>
 {% endblock %}
