--- a/school/static/appStatic/school.css
+++ b/school/static/appStatic/school.css
@@ -173,3 +173,75 @@ a.article, a.article:hover {
         display: none;
     }
 }
+
+.index{
+    width: 350px;
+    z-index: +1;
+    padding: 10px 50px;
+    box-sizing: border-box;
+    background-color: #374785;
+    color: #fff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgb(119, 119, 119);
+}
+
+.form{
+    width: 350px;
+    z-index: +1;
+    padding: 10px 50px;
+    box-sizing: border-box;
+    background-color: #374785;
+    color: #fff;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgb(119, 119, 119);
+}
+
+.form h1{
+    float: left;
+    font-size: 25px;
+    color: #fff;
+    border-bottom: 2px  solid #7386D5;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 10px 0;
+}
+
+.textbox{
+    width: 100%;
+    overflow: hidden;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 10px 0;
+    border-bottom: 1px solid #7386D5;
+}
+
+.row label{
+    font-weight: normal;
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+.row input{
+    border: none; 
+    outline: none;
+    background: none;
+    color: #fff;
+    font-size: 18px;
+    width: 100%;
+    float: left;
+    margin: 0 10px;
+}
+.row button{
+    width: 100%;
+    background: none;
+    border: 1px #fff;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 12px 0;
+}
+.sub{
+    color: rgb(199, 199, 199);
+}
