--- a/school/templates/appTemp/index.html
+++ b/school/templates/appTemp/index.html
@@ -1,15 +1,17 @@
 {% extends "appTemp/base_generic.html" %}
 
 {% block content %}
-    <p class="h1">Welcome To Our School Database</p>
-    <br/><br/>
-    <div class="h3">Now, we have :</div>
-    <br/>
-    <div class="h4">Subject: <mark> {{num_subject}} </mark></div>
-    <div class="h4">Class: <mark> {{num_class}} </mark></div>
-    <div class="h4">Employment: <mark> {{num_employment}} </mark></div>
-    <div class="h4">Extracurricular: <mark> {{num_extracurricular}} </mark></div>
-    <div class="h4">Employee: <mark> {{num_employee}} </mark></div>
-    <div class="h4">Student: <mark> {{num_student}} </mark></div>
-    <div class="h4">Total visit: <mark> {{total_visit}} </mark></div>
+    <div class="index">
+        <p class="h1">Welcome To Our School Database</p>
+        <br/><br/>
+        <div class="h3">Now, we have :</div>
+        <br/>
+        <div class="h4">Subject: <mark> {{num_subject}} </mark></div>
+        <div class="h4">Class: <mark> {{num_class}} </mark></div>
+        <div class="h4">Employment: <mark> {{num_employment}} </mark></div>
+        <div class="h4">Extracurricular: <mark> {{num_extracurricular}} </mark></div>
+        <div class="h4">Employee: <mark> {{num_employee}} </mark></div>
+        <div class="h4">Student: <mark> {{num_student}} </mark></div>
+        <div class="h4">Total visit: <mark> {{total_visit}} </mark></div>
+    </div>
 {% endblock %}
