--- a/school/templates/registration/login.html
+++ b/school/templates/registration/login.html
@@ -42,13 +42,12 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" value="login">Login</button>
+                    <button type="submit" value="login" class="btn btn-active btn-info">Login</button>
                     <input type="hidden" name="next" value="{{ next }}" />
                 </form>
-                <p class="sub">Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
+                <p class="sub">Don't have an account?&emsp;<a href="{% url 'register' %}" class="btn btn-default">Sign Up</a></p>
             </div>
         </div>
-    </div>
     </div>
 </div>
 {% endblock %}
