--- a/school/templates/registration/registration.html
+++ b/school/templates/registration/registration.html
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                     </div>
-                    <button type="submit" value="Register">Register</button>
+                    <button type="submit" value="Register" class="btn btn-active btn-info">Register</button>
                 </form>
             </div>
         </div>
