--- a/school/static/appStatic/school.css
+++ b/school/static/appStatic/school.css
@@ -3,24 +3,8 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    padding: 0;
-    margin: 0;
-    background-color: #ddd;
+    background: #fafafa;
 }
-body::after {
-    content: "";
-    background: url(logo-tut-wuri-handayani.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    opacity: 0.1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -10;
-  }
 
 p {
     font-family: 'Poppins', sans-serif;
@@ -35,17 +19,14 @@ a, a:hover, a:focus {
     text-decoration: none;
     transition: all 0.3s;
 }
-.h4 mark{
-    background: none;
-}
 
 .navbar {
     padding: 15px 10px;
     background: #fff;
     border: none;
-    border-radius: 10px;
+    border-radius: 0;
     margin-bottom: 40px;
-    box-shadow: 2px 2px 5px rgba(24, 24, 24, 0.1);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-btn {
@@ -166,11 +147,10 @@ a.article, a.article:hover {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: +1;
 }
+
 #content.active {
     width: 100%;
-    
 }
 
 
