beautify the design and fix some errors

--- a/school/static/appStatic/school.css
+++ b/school/static/appStatic/school.css
@@ -175,6 +175,9 @@ a.article, a.article:hover {
     }
 }
 
+/* ---------------------------------------------------
+    INDEX
+----------------------------------------------------- */
 .index{
     width: 350px;
     z-index: +1;
