--- a/school/templates/registration/registration.html
+++ b/school/templates/registration/registration.html
@@ -8,16 +8,21 @@
 
 {% block content %}
 <div class="form">
+    <div class="row text-center">
+        <div class="col-12">
+            <h1>{{ user_exists_error }}</h1>
+        </div>
+    </div>
     <div class="col-12">
         <div class="row text-center">
             <div class="col-12 text-center">
-                <form action="" method="post">
+                <form action="" method="post" id="formregistration">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-6 text-left">
                             <label for="username">Username</label>
                             <div class="textbox">
-                                <input type="text" name="username"/>
+                                <input type="text" name="username" id="input1"/>
                             </div>
                         </div>
                     </div>
@@ -25,7 +30,7 @@
                         <div class="col-6 text-left">
                             <label for="email">E-Mail</label>
                             <div class="textbox">
-                                <input type="text" name="email"/>
+                                <input type="text" name="email" id="input2"/>
                             </div>
                         </div>
                     </div>
@@ -33,7 +38,7 @@
                         <div class="col-6 text-left">
                             <label for="password">Password</label>
                             <div class="textbox">
-                                <input type="password" name="password"/>
+                                <input type="password" name="password" id="input3"/>
                             </div>
                         </div>
                     </div>
