--- a/school/static/appStatic/member.css
+++ b/school/static/appStatic/member.css
@@ -6,120 +6,41 @@
     width: 200px;
     margin-left: 350px;
 }
-.aside img{
-    width: 350px;
+.student img{
+    width: 300px;
     text-align: center;
 }
-.student1{
+
+.student{
     float:left;
-    padding: 20px;
+    padding: 12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
 }
-.student2{
-    float:left;
-    padding: 20px;
+
+.tut-wuri-handayani{
+    width: 80px;
+    padding: 12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    margin-left: 50px;
-}
-.student3{
-    float:left;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 50px;
 }
 
 /*------------------------------------------------------
     COVID NEWS
 -------------------------------------------------------- */
 
-.news img{
+.news div img{
     width: 300px;
-    text-align: center;
+    text-align : center;
 }
 
-.news1{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    overflow: auto;
-}
-
-.news2{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 30px;
-    overflow: auto;
-}
-
-.news3{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 30px;
-    overflow: auto;
-}
-
-.news4{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 30px;
-    overflow: auto;
-}
-
-.news5{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 30px;
-    overflow: auto;
-    margin-top: -10px;
-}
-
-.news6{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    overflow: auto;
-    margin-top: 25px;
-}
-
-.news7{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 30px;
-    overflow: auto;
-    margin-top: 15px;
-}
-
-.news8{
-    float:left;
-    max-width: 340px;
-    padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    margin-left: 30px;
-    overflow: auto;
-    margin-top: 25px;
+.news{
+    float : left;
+    max-width : 340px;
+    padding : 20px;
+    box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius : 5px;
+    overflow : auto;
 }
 
 /*------------------------------------------------------
@@ -128,7 +49,7 @@
 .data{
     width: 90%;
     padding: 10px;
-    height: 1000px;
+    height: 880px;
     background: rgb(219, 168, 66);
     color:#fff;
     text-align: center;
@@ -161,47 +82,14 @@
 .story p{
     color:#fff;
 }
-.panji {
-    position: absolute;
-}
-.richard {
-    position: absolute;
-    margin-top: 300px;
-
-}
-.richard p{
-    position: absolute;
-    width: 900px;
-    margin-top: -195px;
-    margin-left: 250px;
-    color:#fff;
-    text-align: left;
-    padding: 5px;
-
-}
-.wchen {
-    position: absolute;
-    margin-top: 600px;
-}
-
-.wchen p{
-    position: absolute;
-    width: 900px;
-    margin-top: -200px;
-    margin-left: 250px;
-    color: #fff;
-    text-align: left;
-    padding: 5px;
-
-}
 
 /*------------------------------------------------------
     CONTACT US
 -------------------------------------------------------- */
 
 .group-msg{
-    position: absolute;
-    margin-left: 600px;
+    
+    
     background-color: rgb(219, 168, 66);
     color: #fff;
     border-radius: 25px;
@@ -209,13 +97,13 @@
 }
 
 .biodata{
-    position: absolute;
-    width: 550px;
+    
+    width: 740px;
     background-color: #374785;
     color: #fff;
     border-radius: 25px;
     padding: 20px;
-    height: 515px;
+    height: 460px;
 }
 
 .biodata h3{
@@ -226,32 +114,12 @@
     margin-top: -10px;
 }
 
-.P{
-    margin-left: 20px;
-    font-size: 16px;
-}
-.R{
-    margin-left: 20px;
-    font-size: 16px;
-}
-.W{
+.contact-bio{
     margin-left: 20px;
     font-size: 16px;
 }
 
-.R p{
-    margin-top: 5px;
-    margin-left: 20px;
-    font-size: 14px;
-    color: #fff;
-}
-.P p{
-    margin-top: 5px;
-    margin-left: 20px;
-    font-size: 14px;
-    color: #fff;
-}
-.W p{
+.contact-bio p{
     margin-top: 5px;
     margin-left: 20px;
     font-size: 14px;
@@ -259,9 +127,9 @@
 }
 
 .button {
-    text-align:right;
+    text-align: right;
 }
 
 .isi{
-    padding:5px;
+    padding: 5px;
 }
