--- a/school/templates/registration/login.html
+++ b/school/templates/registration/login.html
@@ -17,7 +17,7 @@
                     <h1>Your account doesn't have access to this page. To proceed,
                         please login with an account that has access.</h1>
                     {% else %}
-                    <h1>Please login to see this page.</h1>
+                    <h1>Login</h1>
                     {% endif %}
                 {% endif %}
             </div>
